# rule-engine

./: .cursorrules  .dockerignore  .gitignore  API_DOCUMENTATION.md  API_QUICK_START.md  ARCHITECTURE_IMPROVEMENTS.md  Backlog.md  CLAUDE.md  CODE_ISSUES_FIXES.md  CODE_ISSUES_IMPLEMENTATION.md  CODE_ORGANIZATION.md  CODE_ORGANIZATION_IMPLEMENTATION.md  CODE_QUALITY_BACKLOG.md  CONFIGURATION_MANAGEMENT.md  CONFIGURATION_MANAGEMENT_IMPLEMENTATION.md  CONTEXT.md  CONTRIBUTING.md  DATABASE_INTEGRATION.md  DATABASE_QUICKSTART.md  DATABASE_SETUP_SUMMARY.txt  DEPENDENCIES.md  DEPENDENCIES_IMPLEMENTATION.md  DMN_DEPENDENCY_RESOLUTION_SPEC.md  DMN_PARSER_FEATURE.md  DMN_RULES_EXECUTION_API_SPEC.md  Dockerfile  FEATURES_IMPLEMENTATION.md  INSTALLATION_TROUBLESHOOTING.md  Makefile  PERFORMANCE_IMPLEMENTATION.md  PRODUCTION_IMPROVEMENTS.md  QUICK_START_IMPROVEMENTS.md  README.MD  REFERENCES.md  Rule_Engine_API.postman_collection.json  SECURITY_IMPLEMENTATION.md  TESTING_IMPLEMENTATION.md  UI_REVIEW_SUMMARY.md  __init__.py  alembic.ini  (+20 more)
api/: __init__.py  deps.py  main.py  models.py  routers.py
api/middleware/: __init__.py  auth.py  errors.py  logging.py  path_normalizer.py
api/routes/: ab_testing.py  actions_management.py  attributes_management.py  conditions_management.py  consumers.py  dmn_upload.py  executions.py  health.py  hot_reload.py  rule_versioning.py  rules.py  rules_management.py  rulesets_management.py  workflow.py  workflows.py
api/websocket/: hot_reload.py
archive/: README.md  main_rule_exec_v1.py  main_rule_exec_v2.py
common/: __init__.py  cache.py  conditions_enum.py  config.py  config_loader.py  db_connection.py  db_migrations.py  db_models.py  dmn_parser.py  exceptions.py  execution_history.py  issue_field_handler_v2.py  json_util.py  logger.py  metrics.py  rule_engine_util.py  rule_registry.py  rule_tester.py  rule_validator.py  s3_aws_util.py  secrets_manager.py  security.py  util.py
common/di/: __init__.py  container.py  factory.py
common/pattern/: __init__.py
common/repository/: __init__.py  config_factory.py  config_repository.py  db_repository.py
data/input/: Tương Sinh Tương Khắc.dmn  conditions_config.json  rules_config.json  rules_config_v2.json  rules_config_v3.json  rules_config_v4.json  sample_rules.dmn
docs/: API_WORKFLOW_MANAGEMENT.md  BUILD_FIX.md  HOT_RELOAD.md  Makefile  README.md  RULE_VERSIONING_AB_TESTING.md  TROUBLESHOOTING.md  build.sh  conf.py  configuration.rst  debug_build.sh  installation.rst  minimal_conf_test.py  minimal_test.py  overview.rst  quickstart.rst  test_build.py  test_minimal_sphinx.py  test_sphinx_direct.py
docs/_static/: .gitkeep
docs/_templates/: .gitkeep
docs/api/: index.rst
domain/: __init__.py  jsonobj.py
domain/actions/: __init__.py  action_obj.py
domain/conditions/: __init__.py  condition_obj.py
domain/handler/: __init__.py  default_handler.py  finishedcase_handler.py  inprocesscase_handler.py  newcase_handler.py
domain/rules/: __init__.py  rule_obj.py  ruleset_obj.py
domain/ticket/: __init__.py  comic.py  ticket_obj.py
frontend/: .env.example  .gitignore  FRONTEND_SPEC.md  IMPLEMENTATION_STATUS.md  README.md  UI_IMPROVEMENTS.md  UI_REVIEW.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  Router.tsx  main.tsx  (+1 more)
layers/: Makefile  README.md
migrations/: env.py
services/: __init__.py  ab_testing.py  ab_testing_integration.py  actions_management.py  attributes_management.py  conditions_management.py  consumer_management.py  consumer_ruleset_registration.py  execution_query.py  hot_reload.py  hot_reload_integration.py  rule_management.py  rule_versioning.py  ruleengine_exec.py  ruleset_management.py  usage_tracking.py  workflow_exec.py  workflow_management.py
tests/: README.md  __init__.py  conftest.py
(+138 files in other folders)
