[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rule-engine"
version = "1.0.0"
description = "A flexible and extensible rule engine for evaluating business rules and workflows"
readme = "README.MD"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rule Engine Team"}
]
keywords = ["rule-engine", "business-rules", "workflow", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "rule-engine>=4.1.0",
    "jsonpath-ng>=1.5.3",
    "dataclasses-json>=0.6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.1",
    "pytest-asyncio>=0.21.1",
    "pytest-xdist>=3.5.0",
    "coverage>=7.3.4",
    "freezegun>=1.2.2",
    "responses>=0.24.1",
    "moto>=4.2.14",
    "pylint>=3.0.2",
    "flake8>=6.1.0",
    "black>=23.12.1",
    "mypy>=1.7.1",
    "ruff>=0.1.9",
    "types-requests>=2.31.0.20240106",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/rule-engine"
Documentation = "https://github.com/your-org/rule-engine#readme"
Repository = "https://github.com/your-org/rule-engine.git"
Issues = "https://github.com/your-org/rule-engine/issues"

[tool.setuptools]
packages = ["common", "domain", "services"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.ini", "*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | layers
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = false
follow_imports = "normal"
show_error_codes = true
show_error_context = true
show_column_numbers = true
platform = "darwin"

[[tool.mypy.overrides]]
module = [
    "rule_engine.*",
    "boto3.*",
    "botocore.*",
    "jsonpath_ng.*",
]
ignore_missing_imports = true

[tool.pylint.master]
disable = [
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=80",
    "--ignore=layers",
    "--ignore=__pycache__",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may use external dependencies)",
    "slow: Slow running tests",
    "requires_config: Tests that require configuration files",
    "requires_aws: Tests that require AWS credentials",
    "requires_network: Tests that require network access",
]

